--- a/equipment.html
+++ b/equipment.html
@@ -21,12 +21,6 @@
           <span class="brand-text">Boutique</span>
         </a>
 
-        <button class="navbar-toggler text-warning border-warning btn" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <i class="fa-solid fa-burger"></i>
-        </button>
-
         <div class="collapse navbar-collapse flex-grow-1" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 navlist">
             <li class="nav-item">
@@ -46,30 +40,28 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/events.html">Events</a>
+              <a class="nav-link text-white" href="/events.html">Events & Workshops</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="/offer.html">Special Offer</a>
             </li>
           </ul>
         </div>
 
-        <form class="d-flex align-items-center justify-content-between w-100" role="search">
-          <div class="search-bar me-2 d-flex justify-content-between align-items-center position-relative">
-            <input class="text-white font-bold" type="search" placeholder="Search" aria-label="Search" id="searchInput">
-            <ul id="search-result" class="list-group position-absolute w-100 shadow-lg">
-              <!-- Search Results insert in js -->
-            </ul>
-            <i class="fa-solid fa-magnifying-glass fs-4"></i>
-          </div>
-          <button type="button" class="btn btn-light position-relative" data-bs-toggle="modal"
-            data-bs-target="#cartItemsModal">
+        <div>
+          <button class="navbar-toggler text-warning border-warning btn" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fa-solid fa-burger"></i>
+          </button>
+          <button type="button" class="btn btn-light position-relative" data-bs-toggle="modal" data-bs-target="#cartItemsModal">
             <i class="fa-solid fa-cart-shopping"></i>
-            <span
-              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger cart-qty-badge">
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger cart-qty-badge">
               <!-- qty of cart items -->
               <span class="visually-hidden">unread messages</span>
             </span>
           </button>
-        </form>
-
+        </div>
 
       </div>
     </nav>
@@ -92,12 +84,11 @@
   </div>
 
   <!-- equipment-Hero Section -->
-  <section class="equipment-hero-section position-relative text-white text-center">
-    <div class="equipment-hero-content position-absolute top-50 start-50 translate-middle">
-      <h1 class="display-4 fw-bold">Discover the Perfect Coffee Tools</h1>
+  <section class="hero-section text-center text-white">
+    <div class="container">
+      <h2 class="display-1">Discover the Perfect Coffee Tools</h2>
       <p class="lead">From espresso machines to grinders, find everything you need to craft the perfect cup of coffee at
         home.</p>
-      <a href="#equipment" class="btn btn-warning btn-lg mt-3">Browse Equipment</a>
     </div>
   </section>
 
@@ -105,73 +96,17 @@
   <section class="container equipment-section mt-5" id="equipment">
     <h2 class="text-center mb-5">Coffee Equipment</h2>
 
-    <!-- Equipment Item 1 -->
-    <div class="row">
-      <div class="col-12 col-sm-10 col-lg-9">
-        <div class="equipment-item">
-          <img src="./assets/espresso-machine.png" alt="Espresso Machine">
-          <div class="equipment-info">
-            <h5>Espresso Machine</h5>
-            <p>Perfect for making professional-grade espresso at home or in your café. This machine delivers consistent,
-              high-quality results every time.</p>
-            <p><strong>Price:</strong> $899</p>
-            <button class="btn action-btn add-cart-btn">Add to cart <i class="fa-solid fa-cart-plus"></i></button>
-          </div>
-        </div>
+    <form
+      class="search-bar-container d-flex align-items-center justify-content-between w-75 mx-auto border border-2 px-2 mb-4 rounded-pill shadow-sm"
+      role="search">
+      <div class="search-bar w-100 d-flex justify-content-between align-items-center position-relative">
+        <input class="text-dark fw-bold w-100" type="search" placeholder="Search..." aria-label="Search" id="searchInput">
+        <i class="fa-solid fa-magnifying-glass fs-4"></i>
       </div>
-      <div class="col-0 col-sm-2 col-lg-3"></div> <!-- Empty Space Column -->
-    </div>
+    </form>
 
-    <!-- Equipment Item 2 -->
-    <div class="row">
-      <div class="col-0 col-sm-2 col-lg-3"></div> <!-- Empty Space Column -->
-      <div class="col-12 col-sm-10 col-lg-9">
-        <div class="equipment-item">
-          <img src="./assets/grinder.png" alt="Coffee Grinder">
-          <div class="equipment-info">
-            <h5>Coffee Grinder</h5>
-            <p>Grind your coffee beans to perfection with this adjustable grinder, ideal for espresso, drip coffee, or
-              French press.</p>
-            <p><strong>Price:</strong> $199</p>
-            <button class="btn action-btn add-cart-btn">Add to cart <i class="fa-solid fa-cart-plus"></i></button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Equipment Item 3 -->
-    <div class="row">
-      <div class="col-12 col-sm-10 col-lg-9">
-        <div class="equipment-item">
-          <img src="./assets/french-press.jpg" alt="French Press">
-          <div class="equipment-info">
-            <h5>French Press</h5>
-            <p>Classic and easy-to-use French Press for a rich, full-bodied coffee experience. Durable and stylish for
-              everyday use.</p>
-            <p><strong>Price:</strong> $39</p>
-            <button class="btn action-btn add-cart-btn">Add to cart <i class="fa-solid fa-cart-plus"></i></button>
-          </div>
-        </div>
-      </div>
-      <div class="col-0 col-sm-2 col-lg-3"></div> <!-- Empty Space Column -->
-    </div>
-
-    <!-- Equipment Item 4 -->
-    <div class="row">
-      <div class="col-0 col-sm-2 col-lg-3"></div> <!-- Empty Space Column -->
-      <div class="col-12 col-sm-10 col-lg-9">
-        <div class="equipment-item">
-          <img src="./assets/milk-frother.jpg" alt="Milk Frother">
-          <div class="equipment-info">
-            <h5>Milk Frother</h5>
-            <p>Create creamy and velvety froth for your lattes and cappuccinos with this easy-to-use milk frother.
-              Compact
-              and efficient.</p>
-            <p><strong>Price:</strong> $29</p>
-            <button class="btn action-btn add-cart-btn">Add to cart <i class="fa-solid fa-cart-plus"></i></button>
-          </div>
-        </div>
-      </div>
+    <div id="equipment-card-container">
+      <!-- Equipment Cards insert in js -->ss
     </div>
   </section>
 
@@ -194,9 +129,10 @@
               <h3 class="mb-3">Quick Links</h3>
               <div class="d-flex flex-column navlist">
                 <a href="/" class=" fw-light mb-2">Home</a>
-                <a href="/" class=" fw-light mb-2">Coffee</a>
-                <a href="/" class=" fw-light mb-2">Machines</a>
-                <a href="/" class=" fw-light mb-2">Contact</a>
+                <a href="/coffee.html" class=" fw-light mb-2">Coffee</a>
+                <a href="/equipment.html" class=" fw-light mb-2">Equipment</a>
+                <a href="/contact.html" class=" fw-light mb-2">Contact</a>
+                <a href="/offer.html" class=" fw-light mb-2">Special Offer</a>
               </div>
             </div>
 
